--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,7 +2,9 @@ pipeline {
   agent any
   stages {
   stage('SCM Checkout'){
+      steps{
   git 'https://github.com/bhushanphani/jenkins-cicd'
+     }
   }
     stage('Deploy CloudHub') { 
       steps {
