--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,8 @@ pipeline {
   }
     stage('Deploy CloudHub') { 
       steps {
-        sh 'mvn clean install'
+        def mvnHome= "tool name: 'local_maven', type: 'maven'"
+        sh "${mvnHome}/bin/mvn clean install"
       }
     }
   }
