--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,8 +8,8 @@ pipeline {
   }
     stage('Deploy CloudHub') { 
       steps {
-        def mvnHome= "tool name: 'local_maven', type: 'maven'"
-        sh "${mvnHome}/bin/mvn clean install"
+        
+        bat "mvn clean install"
       }
     }
   }
