--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,7 +9,7 @@ pipeline {
     stage('Deploy CloudHub') { 
       steps {
         
-        bat "mvn clean install"
+        bat "mvn clean package deploy -DmuleDeploy"
       }
     }
   }
