--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,7 +9,7 @@ pipeline {
     stage('Deploy CloudHub') { 
       steps {
         
-        bat "mvn clean package deploy -DmuleDeploy"
+        bat "mvn clean package deploy -DmuleDeploy username=${ANYPOINT_CREDENTIALS_USR} -Danypoint.password=${ANYPOINT_CREDENTIALS_PSW}"
       }
     }
   }
