--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
 			    <cloudHubDeployment>
 			      <uri>https://anypoint.mulesoft.com</uri>
 			      <muleVersion>${app.runtime}</muleVersion>
-			      <username>*******</username>
-			      <password>*******</password>
+			      <username>${anypoint.username}</username>
+			      <password>${anypoint.password}</password>
 			      <applicationName>mule-cicd-v1</applicationName>
 			      <environment>Sandbox</environment>
 			      <workers>1</workers>
