--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,8 +7,10 @@ pipeline {
       }
   }
     stage('Deploy CloudHub') { 
+      environment {
+        ANYPOINT_CREDENTIALS = credentials('anypoint.credentials')
+      }
       steps {
-        
         bat "mvn clean package deploy -DmuleDeploy -Danypoint.username=${ANYPOINT_CREDENTIALS_USR} -Danypoint.password=${ANYPOINT_CREDENTIALS_PSW}"
       }
     }
